<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".controller.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unete"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QfindeR"
            android:textSize="40dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/darkBlue"
        android:paddingHorizontal="70dp"
        android:paddingVertical="10dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlNombre"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxStrokeColor="@color/darkBlue"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellido"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlApellido"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxStrokeColor="@color/darkBlue"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtApellido"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxStrokeColor="@color/darkBlue"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCorreo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxStrokeColor="@color/darkBlue"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTelefono"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:textColor="@color/black"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nacimiento"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="DD/MM/AA"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxStrokeColor="@color/darkBlue"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtFecha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrasena"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxStrokeColor="@color/darkBlue"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtContrasena"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="numberPassword"
                android:textColor="@color/black"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Guardar"
            android:backgroundTint="@color/darkBlue"
            android:textSize="20dp"
            android:padding="20dp"
            android:layout_marginHorizontal="10dp"
            />

        <Button
            android:id="@+id/btnListar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="#003978"
            android:padding="20dp"
            android:text="Listar"
            android:textSize="20dp"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btnEditar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Editar"
            android:backgroundTint="#1AA81F"
            android:textSize="20dp"
            android:padding="20dp"
            android:layout_marginHorizontal="10dp"
            />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="#780000"
            android:padding="20dp"
            android:text="Eliminar"
            android:textSize="20dp"
            android:textColor="@color/white"
            />
    </LinearLayout>

</LinearLayout>